Prettier version with more intuitive UI and robuster selection logic

--- a/src/index.html
+++ b/src/index.html
@@ -13,16 +13,17 @@
     <body>
         <div class="container">
             <div class="grid">
-                <div class="grid-item"></div>
-                <div class="grid-item"></div>
-                <div class="grid-item"></div>
-                <div class="grid-item"></div>
-                <div class="grid-item"></div>
-                <div class="grid-item"></div>
-                <div class="grid-item"></div>
-                <div class="grid-item"></div>
-                <div class="grid-item"></div>
+                <div class="grid-item selectable"></div>
+                <div class="grid-item selectable"></div>
+                <div class="grid-item selectable"></div>
+                <div class="grid-item selectable"></div>
+                <div class="grid-item selectable"></div>
+                <div class="grid-item selectable"></div>
+                <div class="grid-item selectable"></div>
+                <div class="grid-item selectable"></div>
+                <div class="grid-item selectable"></div>
             </div>
+            <div id="customButton">Refresh</div>
         </div>
     </body>
 </html>
