Finished version of player's turn indicator

--- a/src/index.html
+++ b/src/index.html
@@ -26,9 +26,9 @@
                 <div class="grid-item selectable"></div>
             </div>
             <div class="player-bar">
-                <div class="block" id="blockone"></div>
-                <div class="block" id="blocktwo"></div>
-                <p>Player one!</p>
+                <div class="block blockOne"></div>
+                <div class="block blockTwo"></div>
+                <p>Player <span id="playerNumber">one</span>!</p>
             </div>
             <div class="button-bar">
                 <div class="customButton enabled" id="switch">Switch Player</div>
