More style changes

--- a/src/index.html
+++ b/src/index.html
@@ -38,7 +38,7 @@
                 <p></p>
             </div>
             <div class="button-bar">
-                <div class="gameLogicButton enabled" id="switch">Switch Player</div>
+                <div class="gameLogicButton enabled" id="switch">Switch</div>
                 <div class="gameLogicButton enabled" id="refresh">Refresh</div>
             </div>
         </div>
