Germanized | Added some browser compatibility

--- a/src/index.html
+++ b/src/index.html
@@ -38,8 +38,8 @@
                 <p></p>
             </div>
             <div class="button-bar">
-                <div class="gameLogicButton enabled" id="switch">Switch</div>
-                <div class="gameLogicButton enabled" id="refresh">Refresh</div>
+                <div class="gameLogicButton enabled" id="switch">Wechseln</div>
+                <div class="gameLogicButton enabled" id="refresh">Neue Runde</div>
             </div>
         </div>
     </body>
